# Aegis-Cpp

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml  linting.yml  preflight.yml  release.yml  staticanalysis.yml
Scripts/: build_nix.sh  build_win.bat  lint.sh  package.sh  preflight.sh  run_all_ci.sh  staticanalysis.sh
